--- a/index.html
+++ b/index.html
@@ -1,245 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Daulet Niyazov — iOS Developer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Daulet Niyazov — iOS Developer</title>
 
-  <style>
-    :root {
-      --bg: #0f1115;
-      --card: #171a21;
-      --text: #e6e6eb;
-      --muted: #9ba1b3;
-      --accent: #4da3ff;
-      --radius: 16px;
-    }
+<style>
+:root {
+  --bg: #000;
+  --card: #0e0e11;
+  --text: #f5f5f7;
+  --muted: #a1a1a6;
+  --accent: #2997ff;
+}
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display",
-                   "SF Pro Text", Helvetica, Arial, sans-serif;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
+}
 
-    body {
-      background: linear-gradient(180deg, #0f1115, #0b0d12);
-      color: var(--text);
-      line-height: 1.6;
-    }
+body {
+  background: var(--bg);
+  color: var(--text);
+}
 
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
+/* ---------- HERO ---------- */
+.hero {
+  text-align: center;
+  padding: 120px 20px 80px;
+}
 
-    header {
-      padding: 80px 20px 60px;
-      max-width: 1100px;
-      margin: auto;
-    }
+.hero h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+}
 
-    header h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      margin-bottom: 12px;
-    }
+.hero p {
+  margin-top: 16px;
+  font-size: 1.2rem;
+  color: var(--muted);
+  max-width: 720px;
+  margin-inline: auto;
+}
 
-    header p {
-      color: var(--muted);
-      max-width: 700px;
-      font-size: 1.1rem;
-    }
+/* ---------- BUTTONS ---------- */
+.buttons {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
 
-    section {
-      max-width: 1100px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+.button {
+  padding: 12px 22px;
+  border-radius: 999px;
+  font-size: 0.9rem;
+  border: 1px solid #2c2c2e;
+  color: var(--text);
+}
 
-    .section-title {
-      font-size: 1.8rem;
-      margin-bottom: 24px;
-    }
+.button.primary {
+  background: var(--accent);
+  color: #000;
+  border: none;
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 24px;
-    }
+/* ---------- SECTION ---------- */
+.section {
+  max-width: 1200px;
+  margin: auto;
+  padding: 100px 20px;
+}
 
-    .card {
-      background: var(--card);
-      border-radius: var(--radius);
-      padding: 24px;
-      transition: transform .2s ease, box-shadow .2s ease;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
+.section h2 {
+  font-size: 2.4rem;
+  text-align: center;
+  margin-bottom: 16px;
+}
 
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 20px 40px rgba(0,0,0,.4);
-    }
+.section p {
+  text-align: center;
+  color: var(--muted);
+  max-width: 700px;
+  margin: auto;
+}
 
-    .card h3 {
-      margin-bottom: 10px;
-      font-size: 1.3rem;
-    }
+/* ---------- IPHONE MOCKUPS ---------- */
+.mockups {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 40px;
+  justify-items: center;
+}
 
-    .card p {
-      color: var(--muted);
-      font-size: 0.95rem;
-      margin-bottom: 14px;
-    }
+.mockups img {
+  width: 100%;
+  max-width: 260px;
+  border-radius: 28px;
+  box-shadow: 0 30px 80px rgba(0,0,0,0.8);
+}
 
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 14px;
-    }
+/* ---------- PROJECT GRID ---------- */
+.grid {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 24px;
+}
 
-    .tag {
-      background: rgba(77,163,255,.12);
-      color: var(--accent);
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 0.75rem;
-    }
+.card {
+  background: var(--card);
+  padding: 24px;
+  border-radius: 20px;
+}
 
-    footer {
-      text-align: center;
-      padding: 40px 20px 60px;
-      color: var(--muted);
-      font-size: 0.85rem;
-    }
-  </style>
+.card h3 {
+  margin-bottom: 10px;
+}
+
+.card p {
+  color: var(--muted);
+  font-size: 0.95rem;
+}
+
+/* ---------- FOOTER ---------- */
+footer {
+  text-align: center;
+  padding: 60px 20px;
+  color: var(--muted);
+  font-size: 0.85rem;
+}
+</style>
 </head>
 
 <body>
 
-<header>
-  <h1>👋 Hi, I'm Daulet</h1>
+<!-- HERO -->
+<section class="hero">
+  <h1>Built for iOS.</h1>
   <p>
-    Self-taught iOS Developer focused on building clean, modern and user-centric
-    applications using <strong>Swift</strong> and <strong>SwiftUI</strong>.
-    Passionate about UI polish, performance and Apple-grade UX.
+    I’m Daulet, a self-taught iOS developer crafting elegant, fast and
+    user-focused apps using Swift and SwiftUI.
   </p>
-</header>
 
-<section>
-  <h2 class="section-title">🚀 Featured Project</h2>
-
-  <div class="grid">
-    <div class="card">
-      <h3>AnotherLife — Habit Tracker</h3>
-      <p>
-        A beautiful and intuitive habit tracking app built with SwiftUI.
-        Designed to help users build better habits through visual tracking,
-        detailed analytics, streaks and insights.
-      </p>
-
-      <div class="tags">
-        <span class="tag">SwiftUI</span>
-        <span class="tag">MVVM</span>
-        <span class="tag">Swift Charts</span>
-        <span class="tag">UserDefaults</span>
-      </div>
-
-      <a href="https://apps.apple.com/us/app/anotherlife-habit-tracker/id6752122842" target="_blank">
-        View on App Store →
-      </a>
-    </div>
+  <div class="buttons">
+    <a class="button primary" href="https://apps.apple.com/us/app/anotherlife-habit-tracker/id6752122842" target="_blank">
+      View on App Store
+    </a>
+    <a class="button" href="https://github.com/niyazovdaulet" target="_blank">
+      GitHub
+    </a>
+    <a class="button" href="https://linkedin.com/in/YOUR-LINKEDIN" target="_blank">
+      LinkedIn
+    </a>
   </div>
 </section>
 
-<section>
-  <h2 class="section-title">📱 iOS Projects</h2>
+<!-- ANOTHERLIFE -->
+<section class="section">
+  <h2>AnotherLife</h2>
+  <p>
+    A habit tracking app designed to help people build better lives through
+    clarity, consistency and beautiful design.
+  </p>
+
+  <div class="mockups">
+    <!-- Replace with your real screenshots -->
+    <img src="images/anotherlife/screen1.png">
+    <img src="images/anotherlife/screen2.png">
+    <img src="images/anotherlife/screen3.png">
+    <img src="images/anotherlife/screen4.png">
+  </div>
+</section>
+
+<!-- OTHER PROJECTS -->
+<section class="section">
+  <h2>Other Projects</h2>
 
   <div class="grid">
-
     <div class="card">
       <h3>Filmly</h3>
-      <p>
-        Modern movie discovery app with search, filters and favorites.
-        Built fully in SwiftUI with a clean, intuitive interface.
-      </p>
-      <div class="tags">
-        <span class="tag">SwiftUI</span>
-        <span class="tag">Networking</span>
-        <span class="tag">MVVM</span>
-      </div>
+      <p>Movie discovery app built in SwiftUI.</p>
     </div>
-
     <div class="card">
       <h3>RecipeBook</h3>
-      <p>
-        Recipe discovery and management app with categories, favorites
-        and modern UI components.
-      </p>
-      <div class="tags">
-        <span class="tag">SwiftUI</span>
-        <span class="tag">UI Design</span>
-      </div>
+      <p>Recipe browsing and favorites app.</p>
     </div>
-
     <div class="card">
       <h3>FlashChat</h3>
-      <p>
-        Real-time chat app using Firebase Firestore with authentication,
-        custom table views and cloud backend.
-      </p>
-      <div class="tags">
-        <span class="tag">UIKit</span>
-        <span class="tag">Firebase</span>
-        <span class="tag">MVC</span>
-      </div>
+      <p>Real-time chat app using Firebase.</p>
     </div>
-
     <div class="card">
       <h3>Clima</h3>
-      <p>
-        Weather app using CoreLocation and live API data.
-        Supports dark mode and city search.
-      </p>
-      <div class="tags">
-        <span class="tag">UIKit</span>
-        <span class="tag">CoreLocation</span>
-        <span class="tag">Networking</span>
-      </div>
+      <p>Weather app with CoreLocation.</p>
     </div>
-
-    <div class="card">
-      <h3>Todoey</h3>
-      <p>
-        Personal productivity app for task management,
-        focusing on simplicity and speed.
-      </p>
-      <div class="tags">
-        <span class="tag">UIKit</span>
-        <span class="tag">Persistence</span>
-      </div>
-    </div>
-
-    <div class="card">
-      <h3>BMI Calculator & Tipsy</h3>
-      <p>
-        Early learning projects focused on MVC, optionals,
-        UI components and core iOS fundamentals.
-      </p>
-      <div class="tags">
-        <span class="tag">Swift</span>
-        <span class="tag">MVC</span>
-        <span class="tag">OOP</span>
-      </div>
-    </div>
-
   </div>
 </section>
 
 <footer>
-  © 2025 Daulet Niyazov · iOS Developer · Built with ❤️ and Swift mindset
+  © 2025 Daulet Niyazov · iOS Developer
 </footer>
 
 </body>
