--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ footer {
     <a class="button" href="https://github.com/niyazovdaulet" target="_blank">
       GitHub
     </a>
-    <a class="button" href="https://linkedin.com/in/YOUR-LINKEDIN" target="_blank">
+    <a class="button" href="https://www.linkedin.com/in/dauletniyazov/" target="_blank">
       LinkedIn
     </a>
   </div>
