--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ footer {
     </a>
 
     <a class="button"
-       href="https://linkedin.com/in/YOUR-LINKEDIN"
+       href="https://www.linkedin.com/in/dauletniyazov/"
        target="_blank">
       LinkedIn
     </a>
