--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 :root {
   --bg: #000000;
   --card: #0e0e11;
+  --card-hover: #1c1c1f;
   --text: #f5f5f7;
   --muted: #a1a1a6;
   --accent: #2997ff;
@@ -55,12 +56,21 @@ body {
 }
 
 .button {
-  padding: 12px 24px;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  padding: 12px 22px;
   border-radius: 999px;
   font-size: 0.95rem;
   border: 1px solid #2c2c2e;
   color: var(--text);
   transition: all .25s ease;
+}
+
+.button svg {
+  width: 16px;
+  height: 16px;
+  fill: currentColor;
 }
 
 .button:hover {
@@ -115,30 +125,39 @@ body {
   box-shadow: 0 35px 90px rgba(0,0,0,.85);
 }
 
-/* ---------- PROJECT BUTTONS ---------- */
-.project-buttons {
+/* ---------- PROJECT CARDS ---------- */
+.projects-grid {
   margin-top: 60px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 22px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 26px;
 }
 
-.project-button {
+.project-card {
+  display: block;
   background: var(--card);
   border: 1px solid #2c2c2e;
-  border-radius: 18px;
-  padding: 22px;
-  text-align: center;
-  font-size: 1.05rem;
+  border-radius: 20px;
+  padding: 26px;
   color: var(--text);
   transition: all .25s ease;
 }
 
-.project-button:hover {
-  background: #1c1c1f;
+.project-card:hover {
+  background: var(--card-hover);
   border-color: var(--accent);
-  color: var(--accent);
-  transform: translateY(-4px);
+  transform: translateY(-6px);
+}
+
+.project-card h3 {
+  margin-bottom: 10px;
+  font-size: 1.25rem;
+}
+
+.project-card p {
+  color: var(--muted);
+  font-size: 0.95rem;
+  line-height: 1.5;
 }
 
 /* ---------- FOOTER ---------- */
@@ -162,23 +181,31 @@ footer {
   </p>
 
   <div class="buttons">
+
     <a class="button primary"
        href="https://apps.apple.com/us/app/anotherlife-habit-tracker/id6752122842"
        target="_blank">
+      <!-- App Store icon -->
+      <svg viewBox="0 0 384 512"><path d="M318.7 268.6c-.3-37.2 16.6-65.3 52.2-86.9-19.9-28.6-50-44.3-89.8-47.3-37.8-3-79.3 22.1-94.4 22.1-15.5 0-52.3-21.3-80.7-20.7C47.5 136.7 0 186.2 0 284.2c0 28.8 5.3 58.6 15.8 89.5 14.1 41.4 64.8 143.1 117.7 141.5 26.5-.6 45.2-18.8 79.6-18.8 33.4 0 50.6 18.8 80.7 18.2 53.4-.9 99.3-93.3 112.7-134.9-69.1-32.5-87.1-89.8-87.8-111.1z"/></svg>
       View on App Store
     </a>
 
     <a class="button"
        href="https://github.com/niyazovdaulet"
        target="_blank">
+      <!-- GitHub icon -->
+      <svg viewBox="0 0 24 24"><path d="M12 .5C5.73.5.5 5.73.5 12c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2c-3.2.7-3.88-1.54-3.88-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.72 1.27 3.38.97.1-.75.4-1.27.73-1.56-2.55-.29-5.23-1.27-5.23-5.67 0-1.25.45-2.27 1.2-3.07-.12-.3-.52-1.52.11-3.16 0 0 .97-.31 3.18 1.17a11.1 11.1 0 012.9-.39c.98 0 1.97.13 2.9.39 2.2-1.48 3.18-1.17 3.18-1.17.63 1.64.23 2.86.11 3.16.75.8 1.2 1.82 1.2 3.07 0 4.41-2.69 5.38-5.25 5.66.41.36.78 1.06.78 2.14v3.17c0 .31.21.67.8.56A11.51 11.51 0 0023.5 12C23.5 5.73 18.27.5 12 .5z"/></svg>
       GitHub
     </a>
 
     <a class="button"
        href="https://www.linkedin.com/in/dauletniyazov/"
        target="_blank">
+      <!-- LinkedIn icon -->
+      <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 5 3.88 6.2 2.4 6.2S0 5 0 3.5 1.1.8 2.4.8s2.58 1.2 2.58 2.7zM.5 8.9h3.8V24H.5zM8.9 8.9h3.6v2.1h.1c.5-1 1.8-2.1 3.7-2.1 4 0 4.7 2.6 4.7 6V24h-3.8v-5.3c0-1.3 0-3-1.8-3s-2.1 1.4-2.1 2.9V24H8.9z"/></svg>
       LinkedIn
     </a>
+
   </div>
 </section>
 
@@ -203,42 +230,36 @@ footer {
   <h2>Other Projects</h2>
   <p>Additional iOS applications available on GitHub.</p>
 
-  <div class="project-buttons">
+  <div class="projects-grid">
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/Filmly"
-       target="_blank">
-      Filmly
+    <a class="project-card" href="https://github.com/niyazovdaulet/Filmly" target="_blank">
+      <h3>Filmly</h3>
+      <p>Modern movie discovery app built with SwiftUI.</p>
     </a>
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/RecipeBook"
-       target="_blank">
-      RecipeBookApp
+    <a class="project-card" href="https://github.com/niyazovdaulet/RecipeBook" target="_blank">
+      <h3>RecipeBookApp</h3>
+      <p>Recipe browsing and favorites management app.</p>
     </a>
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/FlashChat"
-       target="_blank">
-      FlashChat
+    <a class="project-card" href="https://github.com/niyazovdaulet/FlashChat" target="_blank">
+      <h3>FlashChat</h3>
+      <p>Real-time messaging app using Firebase Firestore.</p>
     </a>
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/BMI-Calculator"
-       target="_blank">
-      BMI Calculator
+    <a class="project-card" href="https://github.com/niyazovdaulet/BMI-Calculator" target="_blank">
+      <h3>BMI Calculator</h3>
+      <p>BMI calculation app built to master MVC fundamentals.</p>
     </a>
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/Todoey"
-       target="_blank">
-      Todoey
+    <a class="project-card" href="https://github.com/niyazovdaulet/Todoey" target="_blank">
+      <h3>Todoey</h3>
+      <p>Personal to-do list app focused on productivity.</p>
     </a>
 
-    <a class="project-button"
-       href="https://github.com/niyazovdaulet/Tipsy"
-       target="_blank">
-      Tipsy
+    <a class="project-card" href="https://github.com/niyazovdaulet/Tipsy" target="_blank">
+      <h3>Tipsy</h3>
+      <p>Bill splitting app with clean and friendly UX.</p>
     </a>
 
   </div>
