--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@ footer {
       <h3>Tipsy</h3>
       <p>Bill splitting app with clean and friendly UX.</p>
     </a>
+    
+    <a class="project-card" href="#" target="_blank">
+      <h3>Coming Soon</h3>
+      <p>Coming Soon...</p>
+    </a>
+    
+    <a class="project-card" href="#" target="_blank">
+      <h3>Coming Soon</h3>
+      <p>Coming Soon...</p>
+    </a>
 
   </div>
 </section>
