--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ footer {
       <p>Bill splitting app with clean and friendly UX.</p>
     </a>
     
-    <a class="project-card" href="#" target="_blank">
+    <a class="project-card" href="#">
       <h3>Coming Soon</h3>
       <p>Coming Soon...</p>
     </a>
