--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ footer {
       <p>Coming Soon...</p>
     </a>
     
-    <a class="project-card" href="#" target="_blank">
+    <a class="project-card" href="#">
       <h3>Coming Soon</h3>
       <p>Coming Soon...</p>
     </a>
